PJ-2008-04-07-0: Bugfix:      Problem with case sensitivity for queries in ARCo
                 Bugster:     6684918
                 Bugfix:      Switching from Simple Query to Advanced Query removes the Latebingings
                 Bugster:     6680905
                 Issue:       2536
                 Review:      JO

RD-2008-03-04-0: CVS:       Created V62beta_RC1_TAG
---------------------------------------------------

JO-2008-03-31-0: Enhancem.:   changed messages according to Janice advice
                 Review:      AP

JO-2008-03-27-0: Enhancem.:   Fixed typos, consistency changes, changed messages according to Janice advice
                 Review:      AP

PJ-2008-03-27-0: Bugfix:      Latebindings for Advanced Queries does not work
                 Bugster:     6677885
                 Issue:       2529
                 Bugfix:      Repaired object synchronization in ArcoServlet
                 Bugfix:      Fixed online help for advance query latebindings
                 Review:      JO 

PJ-2008-03-20-0: Bugfix:      Advanced Query with wild card character * does not produce correct results.
                 Enhancem.:   The SQLQueryResultsets is following the names from the database row set meta data.
                 Enhancem.:   The lifecycle of the SQLQueryResultsets is optimised. Passivate is being called in finally
                 Enhancem.:   Unused statements and results pro ArcoDbConnection is removed
                 Enhancem.:   The arco.xsd is reorganised. The related parts are moved together. 
                 Bugster:     6511009
                 Review:      LP

LP-2008-03-18-1: Bugfix:      Fixed typo from LP-2008-03-18-0
                 Review:      JO

LP-2008-03-18-0: Enhancem.:   Added useful message for users when startup fails 
                              with SMF
                 Review:      JO

AP-2008-03-17-0: Bugfix:      Fix of incorrect usage summary for larger databases.