@@ -194,7 +194,6 @@
 
 
         <copy file="${common.dir}/inst_util.sh" todir="${dist.dir}"/>
-        <copy file="${postgres.jdbcdriver}" todir="${dist.lib.dir}"/>
         <copy file="${basedir}/util/dbwriter_template.xml" todir="${dist.dir}/util/sgeSMF"/>
         <copy todir="${dist.dir}">
             <fileset dir="${basedir}">
