@@ -204,8 +204,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the project (only in Sun Grid Engine, Enterprise
-               Edition)</P>
+               <P ALIGN=LEFT>project name </P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -216,8 +215,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the department (only in Sun Grid Engine, Enterprise
-               Edition)</P>
+               <P ALIGN=LEFT>department name</P>
             </TD>
          </TR>
       </TBODY>
@@ -227,7 +225,7 @@
    over time.</P>
    <P>
       Normally, the job usage is recorded after a job has finished, but for long running 
-      jobs an intermediate reporting entry is created after a
+      jobs an intermediate reporting entry is created once a day after a
       midnight. This results in multiple usage records for
       a particular job and allows for a fine-grained resource usage monitoring
       over time. 
@@ -309,7 +307,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the host the job was running on&nbsp;</P>
+               <P ALIGN=LEFT>host name the job was running on&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -596,7 +594,7 @@
                <P ALIGN=LEFT>double&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>integral memory usage in Gbytes seconds&nbsp;</P>
+               <P ALIGN=LEFT>integral memory usage in Gbyte seconds&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -629,7 +627,7 @@
                <P ALIGN=LEFT>double&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>maximum vmem size in bytes&nbsp;</P>
+               <P ALIGN=LEFT>maximum virtual memory size in bytes &nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -640,8 +638,8 @@
                <P ALIGN=LEFT>integer&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>AR_ID issued by qmaster&nbsp;</P>
-               <P ALIGN=LEFT>0 indicates a non AR job&nbsp;</P>
+               <P ALIGN=LEFT>Advance reservation ID (AR_ID) issued by qmaster; 
+               0 indicates a non-advance reservation job&nbsp;</P>
             </TD>
          </TR>
       </TBODY>
@@ -908,7 +906,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>UNIX user account the job was running in</P>
+               <P ALIGN=LEFT>UNIX user account in which the job was running</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -919,7 +917,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the project&nbsp;</P>
+               <P ALIGN=LEFT>project name&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -930,7 +928,7 @@
                <P ALIGN=LEFT>integer&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>shares configured in sharetree&nbsp;</P>
+               <P ALIGN=LEFT>number of shares configured in the share tree&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -1117,7 +1115,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the host&nbsp;</P>
+               <P ALIGN=LEFT>host name&nbsp;</P>
             </TD>
          </TR>
       </TBODY>
@@ -1280,7 +1278,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the host&nbsp;</P>
+               <P ALIGN=LEFT>host name&nbsp;</P>
             </TD>
          </TR>
       </TBODY>
@@ -1431,7 +1429,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the department&nbsp;</P>
+               <P ALIGN=LEFT>department name&nbsp;</P>
             </TD>
          </TR>
       </TBODY>
@@ -1582,7 +1580,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the project&nbsp;</P>
+               <P ALIGN=LEFT>project name&nbsp;</P>
             </TD>
          </TR>
       </TBODY>
@@ -1732,7 +1730,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the user</P>
+               <P ALIGN=LEFT>user name</P>
             </TD>
          </TR>
       </TBODY>
@@ -2657,7 +2655,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the project&nbsp;</P>
+               <P ALIGN=LEFT>project name&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -2668,7 +2666,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the department&nbsp;</P>
+               <P ALIGN=LEFT>department name&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -2757,7 +2755,7 @@
             </TD>
             <TD>
                <P ALIGN=LEFT>amount of data transferred in
-               input/outputoperations&nbsp;</P>
+               input/output operations&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -2878,7 +2876,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the project&nbsp;</P>
+               <P ALIGN=LEFT>project name&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -2889,7 +2887,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the department&nbsp;</P>
+               <P ALIGN=LEFT>department name&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -3142,7 +3140,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>UNIX user account the job was running in</P>
+               <P ALIGN=LEFT>UNIX user account in which the job was running</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -3153,7 +3151,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the project&nbsp;</P>
+               <P ALIGN=LEFT>project name&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -3164,7 +3162,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the department&nbsp;</P>
+               <P ALIGN=LEFT>department name&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -3186,7 +3184,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the vent being recorded&nbsp;</P>
+               <P ALIGN=LEFT>name of the event being recorded&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -3219,7 +3217,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>host on with the event action was initiated&nbsp;</P>
+               <P ALIGN=LEFT>host on which the event action was initiated&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -3230,7 +3228,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>message explaining what happened&nbsp;</P>
+               <P ALIGN=LEFT>message that explains what happened&nbsp;</P>
             </TD>
          </TR>
       </TBODY>
@@ -3260,7 +3258,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the department&nbsp;</P>
+               <P ALIGN=LEFT>department name&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -3445,15 +3443,15 @@
       </THEAD>
       <TBODY>
          <TR VALIGN=TOP>
-            <TH>
+            <TD>
                <P ALIGN=LEFT>hostname&nbsp;</P>
-            </TH>
-            <TH>
+            </TD>
+            <TD>
                <P ALIGN=LEFT>text&nbsp;</P>
-            </TH>
-            <TH>
-               <P ALIGN=LEFT>name of the host&nbsp;</P>
-            </TH>
+            </TD>
+            <TD>
+               <P ALIGN=LEFT>host name&nbsp;</P>
+            </TD>
          </TR>
          <TR VALIGN=TOP>
             <TD>
@@ -3549,7 +3547,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the project&nbsp;</P>
+               <P ALIGN=LEFT>project name&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -3656,7 +3654,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the host&nbsp;</P>
+               <P ALIGN=LEFT>host name&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -3753,7 +3751,7 @@
                <P ALIGN=LEFT>text&nbsp;</P>
             </TD>
             <TD>
-               <P ALIGN=LEFT>name of the user&nbsp;</P>
+               <P ALIGN=LEFT>user name&nbsp;</P>
             </TD>
          </TR>
          <TR VALIGN=TOP>
@@ -3899,104 +3897,7 @@
          </TR>
       </TBODY>
    </TABLE>
-   
-   <H2><A NAME="view_group_values"></A>view_group_values</H2>
-   <P>Group specific variables</P>
-   <TABLE WIDTH=100% BORDER=1 CELLPADDING=10 CELLSPACING=0>
-      <THEAD>
-         <TR VALIGN=TOP>
-            <TH>
-               <P ALIGN=LEFT>Column&nbsp;</P>
-            </TH>
-            <TH>
-               <P ALIGN=LEFT>Type&nbsp;</P>
-            </TH>
-            <TH>
-               <P ALIGN=LEFT>Description&nbsp;</P>
-            </TH>
-         </TR>
-      </THEAD>
-      <TBODY>
-         <TR VALIGN=TOP>
-            <TD>
-               <P ALIGN=LEFT>groupname&nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>text&nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>name of the group&nbsp;</P>
-            </TD>
-         </TR>
-         <TR VALIGN=TOP>
-            <TD>
-               <P ALIGN=LEFT>time_start&nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>timestamp&nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>start time for the validity of a value&nbsp;</P>
-            </TD>
-         </TR>
-         <TR VALIGN=TOP>
-            <TD>
-               <P ALIGN=LEFT>time_end&nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>timestamp&nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>end time for the validity of a value&nbsp;</P>
-            </TD>
-         </TR>
-         <TR VALIGN=TOP>
-            <TD>
-               <P ALIGN=LEFT>variable&nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>text &nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>variable name, e.g. h_sum_jobs&nbsp;</P>
-            </TD>
-         </TR>
-         <TR VALIGN=TOP>
-            <TD>
-               <P ALIGN=LEFT>str_value&nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>text&nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>variable value, e.g. 53&nbsp;</P>
-            </TD>
-         </TR>
-         <TR VALIGN=TOP>
-            <TD>
-               <P ALIGN=LEFT>num_value&nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>double precision&nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>variable value as number&nbsp;</P>
-            </TD>
-         </TR>
-         <TR VALIGN=TOP>
-            <TD>
-               <P ALIGN=LEFT>num_config&nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>double precision&nbsp;</P>
-            </TD>
-            <TD>
-               <P ALIGN=LEFT>not applicable&nbsp;</P>
-            </TD>
-         </TR>
-      </TBODY>
-   </TABLE>
-   
+  
    <H2><A NAME="view_ar_attribute"></A>view_ar_attribute</H2>
    <P>Attributes for the AR.</P>
    <TABLE WIDTH=100% BORDER=1 CELLPADDING=10 CELLSPACING=0>
@@ -4210,7 +4111,7 @@
          </TR>
          <TR VALIGN=TOP>
             <TD>
-               <P ALIGN=LEFT>atermination_time</P>
+               <P ALIGN=LEFT>termination_time</P>
             </TD>
             <TD>
                <P ALIGN=LEFT>timestamp</P>
@@ -4225,7 +4126,7 @@
             </TD>
             <TD>
                <P ALIGN=LEFT>text</P>
-            </TD>
+            </TD>sge
             <TD>
                <P ALIGN=LEFT>name of the cluster queue that the AR reserved</P>
             </TD>
